move stuff from home page to separate page

--- a/frontend/src/styles/pages/Home.module.scss
+++ b/frontend/src/styles/pages/Home.module.scss
@@ -1,16 +1,9 @@
 @use '@styles/objects/container' as container;
 @use '@styles/settings/media' as media;
-
-.home {
-}
+@use '@styles/tools/focus';
 
 .container {
     @include container.container;
-}
-
-.inner {
-    height: 800px;
-    
 }
 
 .logo {
