add pitch controls and custom draw component

--- a/frontend/src/styles/settings/_colours.scss
+++ b/frontend/src/styles/settings/_colours.scss
@@ -3,6 +3,7 @@
     --colour-white: #ffffff;
     --colour-darkGreen: #3f6168;
     --colour-blush: #e3cccc;
+    --colour-pink: #daafaf;
     --colour-lightBeige: #f3f1f0;
     --colour-beige: #ddd7d5;
     --colour-brown: #605a64;
