add graphql queries in frontend, move pages about

--- a/frontend/src/styles/pages/Games.module.scss
+++ b/frontend/src/styles/pages/Games.module.scss
@@ -1,4 +1,11 @@
 @use '@styles/objects/container' as container;
+@use '@styles/elements/header' as header;
+
+.games {
+    h1 {
+        @include header.h1;
+    }
+}
 
 .container {
     @include container.container;
