refactor code in fetching frame data, ad borer

--- a/frontend/src/components/PitchDetails/PitchDetails.module.scss
+++ b/frontend/src/components/PitchDetails/PitchDetails.module.scss
@@ -8,7 +8,8 @@
     @include media.minWidth(smallDesktop) {
         display: flex;
         align-items: center;
-        gap: 50px;
+        gap: 100px;
+        margin-top: 80px;
     }
 }
 
