--- a/frontend/src/styles/settings/_colours.scss
+++ b/frontend/src/styles/settings/_colours.scss
@@ -1,11 +1,12 @@
 :root {
-    --colour-text: #605a64;
-    --colour-white: #ffffff;
-    --colour-darkGreen: #3f6168;
-    --colour-blush: #e3cccc;
-    --colour-pink: #daafaf;
-    --colour-lightBeige: #f3f1f0;
-    --colour-beige: #ddd7d5;
-    --colour-brown: #605a64;
-    --colour-lightBlue: #b3d7df;
+  --colour-text: #605a64;
+  --colour-white: #ffffff;
+  --colour-darkGreen: #3f6168;
+  --colour-blush: #e3cccc;
+  --colour-pink: #daafaf;
+  --colour-lightBeige: #f3f1f0;
+  --colour-beige: #ddd7d5;
+  --colour-brown: #605a64;
+  --colour-lightBlue: #b3d7df;
+  --colour-greenBlack: #444e50;
 }
