--- a/frontend/src/styles/settings/_typography.scss
+++ b/frontend/src/styles/settings/_typography.scss
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap");
 
 :root {
-    --font-title: 'Oxygen', sans-serif;
-    --font-body: 'Oxygen', sans-serif;
+  --font-title: "Jost", sans-serif;
+  --font-body: "Oxygen", sans-serif;
 }
