--- a/frontend/src/styles/settings/_colours.scss
+++ b/frontend/src/styles/settings/_colours.scss
@@ -1,13 +1,17 @@
 :root {
-    --colour-text: #605a64;
-    --colour-black: #000000;
-    --colour-white: #ffffff;
-    --colour-darkGreen: #3f6168;
-    --colour-blush: #e3cccc;
-    --colour-pink: #daafaf;
-    --colour-lightBeige: #f3f1f0;
-    --colour-beige: #ddd7d5;
-    --colour-brown: #605a64;
-    --colour-lightBlue: #b3d7df;
-    --colour-greenBlack: #444e50;
+  --colour-text: #605a64;
+  --colour-black: #000000;
+  --colour-white: #ffffff;
+  --colour-darkGreen: #3f6168;
+  --colour-dimGreen: #3f616836;
+  --colour-blush: #e3cccc;
+  --colour-darkPink: #c1afaf;
+  --colour-pink: #daafaf;
+  --colour-lightPink: #f4ebeb;
+  --colour-lightBeige: #f3f1f0;
+  --colour-beige: #ddd7d5;
+  --colour-brown: #605a64;
+  --colour-lightBlue: #b3d7df;
+  --colour-mintGreen: #c5dade;
+  --colour-greenBlack: #444e50;
 }
