--- a/frontend/src/styles/settings/_typography.scss
+++ b/frontend/src/styles/settings/_typography.scss
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;500&display=swap");
 
 :root {
   --font-title: "Jost", sans-serif;
   --font-body: "Oxygen", sans-serif;
+  --font-karla: "Karla", sans-serif;
 }
