Updated Layout of Player Page

--- a/frontend/src/styles/settings/_colours.scss
+++ b/frontend/src/styles/settings/_colours.scss
@@ -5,13 +5,18 @@
   --colour-darkGreen: #3f6168;
   --colour-dimGreen: #3f616836;
   --colour-blush: #e3cccc;
+  --colour-darkerPink: #b5758c;
   --colour-darkPink: #c1afaf;
   --colour-pink: #daafaf;
   --colour-lightPink: #f4ebeb;
   --colour-lightBeige: #f3f1f0;
   --colour-beige: #ddd7d5;
   --colour-brown: #605a64;
+  --colour-beigeBrown: #9a8b7e;
   --colour-lightBlue: #b3d7df;
   --colour-mintGreen: #c5dade;
   --colour-greenBlack: #444e50;
+  --colour-lightGrey: #edeff3;
+  --colour-darkGrey: #eaeeee;
+  --colour-darkBlue: #1a3966;
 }
