--- a/frontend/src/styles/pages/Game.module.scss
+++ b/frontend/src/styles/pages/Game.module.scss
@@ -1,9 +1,34 @@
 @use '@styles/objects/container' as container;
+@use '@styles/elements/header' as header;
 
 .game {
     padding: 60px 0;
+
+    h1 {
+        @include header.h1;
+        font-family: var(--font-body);
+    }
 }
 
 .container {
     @include container.container;
+}
+
+.score {
+    color: var(--colour-black);
+}
+
+.date {
+    font-size: 2.4rem;
+    color: var(--colour-black);
+    text-transform: uppercase;
+    margin-top: 25px;
+}
+
+.type {
+    margin-left: 30px;
+    background-color: rgba(63, 97, 104, 0.21);
+    padding: 8px;
+    border-radius: 20px;
+    font-weight: 700;
 }
