--- a/frontend/src/styles/settings/_colours.scss
+++ b/frontend/src/styles/settings/_colours.scss
@@ -18,5 +18,7 @@
   --colour-greenBlack: #444e50;
   --colour-lightGrey: #edeff3;
   --colour-darkGrey: #eaeeee;
+  --colour-lighterGrey: rgb(240, 237, 237);
+  --colour-darkerGrey: rgb(122, 121, 121);
   --colour-darkBlue: #1a3966;
 }
