--- a/frontend/src/components/PlayerInfo/PlayerInfo.module.scss
+++ b/frontend/src/components/PlayerInfo/PlayerInfo.module.scss
@@ -3,10 +3,9 @@
 
   display: grid;
   grid-template-columns: 0.3fr 0.6fr;
-
   gap: 15px;
   border-radius: 100px;
-  padding: 10px;
+
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
 }
 
@@ -14,6 +13,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 10px 0;
 
   p,
   span {
