--- a/frontend/src/styles/pages/Games.module.scss
+++ b/frontend/src/styles/pages/Games.module.scss
@@ -1,12 +1,36 @@
-@use '@styles/objects/container' as container;
-@use '@styles/elements/header' as header;
+@use "@styles/objects/container" as container;
+@use "@styles/elements/header" as header;
 
 .games {
-    h1 {
-        @include header.h1;
-    }
+  h1 {
+    @include header.h1;
+  }
+
+  h1,
+  h2 {
+    font-weight: 400;
+    font-family: var(--font-body);
+    letter-spacing: 2px;
+  }
+
+  h2 {
+    color: var(--colour-black);
+    font-size: 3.75rem;
+    font-family: var(--font-karla);
+  }
+  span {
+    font-size: 2.1rem;
+  }
+}
+
+.head {
+  background-color: var(--colour-lightPink);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 15px 40px;
 }
 
 .container {
-    @include container.container;
+  @include container.container;
 }
