--- a/frontend/src/styles/pages/Home.module.scss
+++ b/frontend/src/styles/pages/Home.module.scss
@@ -8,6 +8,10 @@
   background-size: cover;
   background-position: 50% 25%;
   min-height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .splashScreen {
@@ -25,18 +29,6 @@
 
 .container {
   @include container.container;
-}
-
-.logo {
-  min-width: 320px;
-  padding: 170px 0 0 0;
-
-  @include media.minWidth(smallDesktop) {
-    padding: 0;
-    margin-bottom: 150px;
-    min-width: 660px;
-    min-height: 210px;
-  }
 }
 
 .pageHome {
@@ -77,7 +69,7 @@
   .btn {
     color: var(--colour-white);
     background-color: var(--colour-darkGreen);
-  
+
     &:hover,
     &:active {
       color: var(--colour-darkGreen);
@@ -85,8 +77,6 @@
     }
   }
 }
-
-
 
 .upcomingContainer {
   grid-area: upcoming;
@@ -115,12 +105,18 @@
 
 .logocontainer {
   grid-area: logo;
-  justify-self: flex-end;
+  justify-self: end;
 }
 
 .logo {
-  min-width: 520px;
-  //
+  min-width: 320px;
+  padding: 170px 0 0 0;
+
+  @include media.minWidth(smallDesktop) {
+    padding: 0;
+    min-width: 400px;
+    min-height: 210px;
+  }
 }
 
 .recentMatches {
@@ -141,5 +137,3 @@
   flex-direction: column;
   gap: 30px;
 }
-
-
