--- a/frontend/src/components/LoadSpinner/LoadSpinner.module.scss
+++ b/frontend/src/components/LoadSpinner/LoadSpinner.module.scss
@@ -1,30 +1,32 @@
 .loadSpinner {
-  position: relative;
-  display: inline-block;
-  min-height: 40px;
-  min-width: 40px;
+    position: absolute;
+    display: inline-block;
+    min-height: 55px;
+    min-width: 55px;
+    left: -12px;
+    top: -8px;
 }
 
 .loadSpinner::before {
-  position: absolute;
-  inset: 0;
-  content: "";
-  border: 5px dashed var(--colour-lighterGrey);
-  border-radius: 50%;
-  animation: spin 1.1s ease-in-out infinite;
+    position: absolute;
+    inset: 0;
+    content: '';
+    border: 4px dashed var(--colour-lighterGrey);
+    border-radius: 50%;
+    animation: spin 1.4s ease-in-out infinite;
 }
 
 @keyframes spin {
-  25% {
-    border-right-color: var(--colour-darkerGrey);
-  }
-  50% {
-    border-bottom-color: var(--colour-darkerGrey);
-  }
-  75% {
-    border-left-color: var(--colour-darkerGrey);
-  }
-  100% {
-    border-top-color: var(--colour-darkerGrey);
-  }
+    25% {
+        border-right-color: var(--colour-darkerGrey);
+    }
+    50% {
+        border-bottom-color: var(--colour-darkerGrey);
+    }
+    75% {
+        border-left-color: var(--colour-darkerGrey);
+    }
+    100% {
+        border-top-color: var(--colour-darkerGrey);
+    }
 }
