--- a/frontend/src/components/MatchCard/MatchCard.module.scss
+++ b/frontend/src/components/MatchCard/MatchCard.module.scss
@@ -9,34 +9,50 @@
     padding: 12.5px;
     font-weight: 400;
     font-size: 2rem;
-  }
-  
-  .dateTime {
+
+    &.alt {
+        flex-direction: row;
+        width: 100%;
+        max-width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        border-radius: 20px;
+
+        .dateTime {
+            gap: 15px;
+        }
+    }
+}
+
+.dateTime {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  
+    flex-wrap: wrap;
+
     p {
-      color: var(--colour-black);
-      font-weight: 500;
+        color: var(--colour-black);
+        font-weight: 500;
     }
-  
+
     span {
-      background-color: var(--colour-dimGreen);
-      padding: 5px 7.5px;
-      border-radius: 20px;
-      font-weight: 700;
-      color: var(--colour-black);
+        background-color: var(--colour-dimGreen);
+        padding: 5px 7.5px;
+        border-radius: 20px;
+        font-weight: 700;
+        color: var(--colour-black);
     }
-  }
-  
-  .teamScore {
+}
+
+.teamScore {
     display: flex;
     justify-content: center;
     gap: 10px;
-  }
-  
-  .scores {
+    flex-wrap: wrap;
+}
+
+.scores {
     font-weight: 700;
     color: var(--colour-black);
-  }
+}
