--- a/frontend/src/styles/pages/PlayerPage.module.scss
+++ b/frontend/src/styles/pages/PlayerPage.module.scss
@@ -1,75 +1,46 @@
-@use "@styles/objects/container" as container;
+@use '@styles/objects/container' as container;
 
 .playerPage {
-  h1 {
-    font-size: 3.5rem;
-    font-weight: 400;
-    letter-spacing: 1.5px;
-    margin: 20px 0;
-  }
-
-  h2 {
-    font-family: var(--font-karla);
-    font-weight: 500;
-    font-size: 3.25rem;
-  }
-
-  h3 {
-    font-family: var(--font-karla);
-    font-weight: 400;
-    font-size: 3rem;
-
-    &:nth-of-type(1) {
-      color: var(--colour-darkBlue);
+    h1 {
+        font-size: 3.5rem;
+        font-weight: 400;
+        letter-spacing: 1.5px;
+        margin: 20px 0;
     }
-    &:nth-of-type(2) {
-      color: var(--colour-darkGreen);
-    }
-    &:nth-of-type(3) {
-      color: var(--colour-darkerPink);
-    }
-    &:nth-of-type(4) {
-      color: var(--colour-beigeBrown);
-    }
-  }
-}
 
-.head {
-  background-color: var(--colour-lightPink);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 40px;
+    h2 {
+        font-family: var(--font-karla);
+        font-weight: 500;
+        font-size: 3.25rem;
+    }
 }
 
 .heading {
-  display: flex;
-  flex-direction: column;
-  text-align: end;
+    text-align: end;
 
-  span {
-    font-weight: 600;
-  }
+    span {
+        font-weight: 600;
+    }
 
-  p {
-    font-size: 2rem;
-  }
+    p {
+        font-size: 2rem;
+    }
 }
 
 .container {
-  @include container.container;
+    @include container.container;
 }
 
 .btn {
-  border-radius: 60px;
-  font-size: 3.25rem;
-  padding: 45px 30px;
-  color: var(--colour-darkGreen);
-  background-color: var(--colour-mintGreen);
+    border-radius: 60px;
+    font-size: 3.25rem;
+    padding: 45px 30px;
+    color: var(--colour-darkGreen);
+    background-color: var(--colour-mintGreen);
 
-  &:hover,
-  &:active {
-    color: var(--colour-white);
-    background-color: var(--colour-darkGreen);
-  }
+    &:hover,
+    &:active {
+        color: var(--colour-white);
+        background-color: var(--colour-darkGreen);
+    }
 }
