--- a/frontend/src/components/PlayerInfo/PlayerInfo.module.scss
+++ b/frontend/src/components/PlayerInfo/PlayerInfo.module.scss
@@ -1,52 +1,64 @@
+@use '@styles/settings/media' as media;
+
 .playerWrapper {
-  background-color: var(--colour-lightGrey);
-
-  display: grid;
-  grid-template-columns: 0.3fr 0.6fr;
-  gap: 15px;
-  border-radius: 100px;
-
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
+    background-color: var(--colour-lightGrey);
+    display: grid;
+    grid-template-columns: 3fr 6fr;
+    gap: 15px;
+    border-radius: 100px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
+    place-items: center;
 }
 
 .playerInfo {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px 0;
 
-  p,
-  span {
-    font-size: 2.5rem;
-  }
+    p,
+    span {
+        font-size: 2.5rem;
+    }
 
-  span {
-    color: var(--colour-darkGreen);
-  }
+    span {
+        color: var(--colour-darkGreen);
+    }
+
+    p {
+        @include media.minWidth(smallDesktop) {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            max-width: 200px;
+        }
+    }
 }
 
 .nameNumber {
-  display: flex;
-  align-items: center;
-  gap: 25px;
+    display: flex;
+    align-items: center;
+    gap: 25px;
 
-  p {
-    color: var(--colour-black);
-  }
+    p {
+        color: var(--colour-black);
+    }
 }
 
 .country {
-  display: flex;
-  align-items: center;
-  gap: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .img {
-  background-color: var(--colour-darkGreen);
-  border-radius: 50%;
+    background-color: var(--colour-darkGreen);
+    border-radius: 50%;
+    width: 140px;
+    height: 140px;
 }
 
 .flag {
-  max-width: 75px;
-  max-height: 55px;
+    max-width: 75px;
+    max-height: 55px;
 }
