created main body of livefeed with components

--- a/frontend/src/styles/settings/_colours.scss
+++ b/frontend/src/styles/settings/_colours.scss
@@ -9,11 +9,14 @@
   --colour-darkPink: #c1afaf;
   --colour-pink: #daafaf;
   --colour-lightPink: #f4ebeb;
+  --colour-tonePink: #e4d8d8b2;
+  --colour-lighterBeige: #f8f5f4;
   --colour-lightBeige: #f3f1f0;
   --colour-beige: #ddd7d5;
   --colour-brown: #605a64;
   --colour-beigeBrown: #9a8b7e;
   --colour-lightBlue: #b3d7df;
+  --colour-manc: #65afc6;
   --colour-mintGreen: #c5dade;
   --colour-greenBlack: #444e50;
   --colour-lightGrey: #edeff3;
