--- a/frontend/src/components/PlayerInfo/PlayerInfo.module.scss
+++ b/frontend/src/components/PlayerInfo/PlayerInfo.module.scss
@@ -26,12 +26,10 @@
     }
 
     p {
-        @include media.minWidth(smallDesktop) {
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            max-width: 200px;
-        }
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        max-width: 180px;
     }
 }
 
@@ -52,7 +50,7 @@
 }
 
 .img {
-    background-color: var(--colour-darkGreen);
+    background-color: #f4dcde;
     border-radius: 50%;
     width: 140px;
     height: 140px;
