--- a/frontend/src/components/DropDown/DropDown.module.scss
+++ b/frontend/src/components/DropDown/DropDown.module.scss
@@ -1,35 +1,35 @@
 .dropdown {
-  p {
-    font-size: 2rem;
-    font-weight: 600;
-  }
+    p {
+        font-size: 2rem;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-right: 30px;
+    }
 }
 
 .arrow {
-  color: var(--colour-darkGreen);
-  max-width: 20px;
-  max-height: 20px;
-  transition: all 0.5s;
+    color: var(--colour-darkGreen);
+    max-width: 20px;
+    max-height: 20px;
+    transition: all 0.5s;
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 .open {
-  transform: rotate(180deg);
+    transform: translateY(-50%) rotate(180deg);
 }
 
 .dropdownPlaceholder {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px;
-  border-radius: 20px;
-  margin: 30px 0;
-  cursor: pointer;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  max-width: 350px;
-  color: var(--colour-darkGreen);
-}
-
-.inner {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+    position: relative;
+    padding: 15px;
+    border-radius: 20px;
+    margin: 30px 0;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    min-width: 350px;
+    color: var(--colour-darkGreen);
 }
