--- a/frontend/src/components/MatchCard/MatchCard.module.scss
+++ b/frontend/src/components/MatchCard/MatchCard.module.scss
@@ -1,58 +1,63 @@
+@use "@styles/settings/media" as media;
+
 .matches {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border: 3px solid var(--colour-darkGreen);
-    background-color: var(--colour-white);
-    border-radius: 10px;
-    max-width: 660px;
-    padding: 12.5px;
-    font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 3px solid var(--colour-darkGreen);
+  background-color: var(--colour-white);
+  border-radius: 10px;
+  max-width: 660px;
+  padding: 12.5px;
+  font-weight: 400;
+  font-size: 1.5rem;
+
+  @include media.minWidth(smallDesktop) {
     font-size: 2rem;
-
-    &.alt {
-        flex-direction: row;
-        width: 100%;
-        max-width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        border-radius: 20px;
-
-        .dateTime {
-            gap: 15px;
-        }
-    }
-}
-
-.dateTime {
-    display: flex;
+  }
+  &.alt {
+    flex-direction: row;
+    width: 100%;
+    max-width: 100%;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    border-radius: 20px;
 
-    p {
-        color: var(--colour-black);
-        font-weight: 500;
+    .dateTime {
+      gap: 15px;
     }
+  }
+}
 
-    span {
-        background-color: var(--colour-dimGreen);
-        padding: 5px 7.5px;
-        border-radius: 20px;
-        font-weight: 700;
-        color: var(--colour-black);
-    }
+.dateTime {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+
+  p {
+    color: var(--colour-black);
+    font-weight: 500;
+  }
+
+  span {
+    background-color: var(--colour-dimGreen);
+    padding: 5px 7.5px;
+    border-radius: 20px;
+    font-weight: 700;
+    color: var(--colour-black);
+  }
 }
 
 .teamScore {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
 .scores {
-    font-weight: 700;
-    color: var(--colour-black);
+  font-weight: 700;
+  color: var(--colour-black);
 }
