--- a/frontend/src/components/LiveFeed/LiveFeed.module.scss
+++ b/frontend/src/components/LiveFeed/LiveFeed.module.scss
@@ -1,21 +1,22 @@
 .cardWrapper {
-  background-color: var(--colour-white);
-  border-radius: 10px;
-  padding: 17.5px;
-  max-width: 650px;
+    background-color: var(--colour-white);
+    border-radius: 10px;
+    padding: 17.5px;
+    max-width: 650px;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    gap: 5px;
 
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+    p,
+    span {
+        font-size: 1.75rem;
+        line-height: 1.3;
+        white-space: pre-wrap;
+    }
 
-  p,
-  span {
-    font-size: 1.75rem;
-    line-height: 1.3;
-  }
-
-  span {
-    margin-right: 3px;
-    font-weight: 600;
-  }
+    span {
+        margin-right: 3px;
+        font-weight: 600;
+    }
 }
