--- a/frontend/src/styles/pages/LiveFeed.module.scss
+++ b/frontend/src/styles/pages/LiveFeed.module.scss
@@ -9,6 +9,24 @@
     button {
         cursor: pointer;
         width: 100%;
+
+        &.hasImg {
+            position: relative;
+
+            &:before {
+                content: '!';
+                color: white;
+                font-weight: bold;
+                text-align: center;
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                background-color: var(--colour-darkGreen);
+                right: -5px;
+                top: -5px;
+            }
+        }
     }
 }
 
@@ -46,10 +64,9 @@
     justify-content: space-evenly;
     align-items: center;
     gap: 30px;
-    // max-height: 100vh;
-    max-height: 100%;
+    max-height: 100vh;
 }
 
 .graph {
-    // height: 50%;
+    height: calc(50% - 30px);
 }
