fix couple of bugs

--- a/frontend/src/components/PageHeader/PageHeader.module.scss
+++ b/frontend/src/components/PageHeader/PageHeader.module.scss
@@ -5,6 +5,10 @@
     position: relative;
     background-color: #eae2e2;
     padding: 15px 0 80px 0;
+
+    @media print {
+        display: none;
+    }
 }
 
 .hamburger {
