--- a/frontend/src/components/PitchDetails/PitchDetails.module.scss
+++ b/frontend/src/components/PitchDetails/PitchDetails.module.scss
@@ -35,6 +35,10 @@
         flex-direction: column;
     }
 
+    @media print {
+        display: none;
+    }
+
     button {
         @include focus.focus(var(--colour-darkGreen));
         cursor: pointer;
