--- a/frontend/src/components/EventCard/EventCard.module.scss
+++ b/frontend/src/components/EventCard/EventCard.module.scss
@@ -7,6 +7,7 @@
     margin-top: 20px;
     align-items: center;
     color: var(--colour-black);
+    background-color: var(--colour-white);
 }
 
 .time {
