final bug fixes

--- a/frontend/src/components/EventCard/EventCard.module.scss
+++ b/frontend/src/components/EventCard/EventCard.module.scss
@@ -8,6 +8,8 @@
     align-items: center;
     color: var(--colour-black);
     background-color: var(--colour-white);
+    width: 100%;
+    cursor: pointer;
 }
 
 .time {
