--- a/frontend/src/styles/pages/Game.module.scss
+++ b/frontend/src/styles/pages/Game.module.scss
@@ -9,6 +9,7 @@
     h1 {
         @include header.h1;
         font-family: var(--font-body);
+        font-weight: normal;
     }
 }
 
@@ -28,6 +29,7 @@
 
 .score {
     color: var(--colour-black);
+    font-weight: bold;
 }
 
 .date {
